--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,32 @@
+# Excluded IDE Directories
+.idea/
+.vs/
+.vscode/
+.ws/
 
-.vscode/settings.json
-.vscode/diff/vulsCount.txt
+# Excluded Local/User Directories
+_archive/
+_misc/
+local/
+log/
+target/
+
+# Excluded Files - Extensions
+*.iml
+*.png
+*.tar.gz
+*.url
+
+# Excluded Files - Naming Convention
+local-env.*
+local-params.config
+/venv/
+/ws-projects-cleanup/conf/
+/ws_cleanup_tool/cleanup.log
+/build/
+/ws_cleanup_tool.egg-info/
+/dist/
+ws_cleanup_tool/__pycache__/
+ws_cleanup_tool/tests/__pycache__/
+params.config
+*.config
