adding Analyzed_regex fixing small things

--- a/params.config
+++ b/params.config
@@ -1,7 +1,7 @@
 [DEFAULT]
 WsUserKey=
 WsOrgToken=
-WsUrl=saas.whitesource.com
+WsUrl=saas.whitesourcesoftware.com
 ReportTypes=
 OperationMode=FilterProjectsByUpdateTime
 #OperationMode=FilterProjectsByLastCreatedCopies
