--- a/.github/workflows/Test and Deploy Mend.yml
+++ b/.github/workflows/Test and Deploy Mend.yml
@@ -126,6 +126,11 @@ jobs:
         with:
           path: dist/${{needs.build-and-test.outputs.min_py_ver}}/${{needs.build-and-test.outputs.tool_dir}}-${{needs.build-and-test.outputs.version}}-py3-none-any.whl
           key: ${{needs.build-and-test.outputs.min_py_ver}}_${{needs.build-and-test.outputs.tool_dir}}_${{ github.run_id }}
+      - name: Restore whl - ws
+        uses: actions/cache@v3
+        with:
+          path: dist/${{needs.build-and-test.outputs.min_py_ver}}/ws_cleanup_tool-${{needs.build-and-test.outputs.version}}-py3-none-any.whl
+          key: ${{needs.build-and-test.outputs.min_py_ver}}_ws_cleanup_tool_${{ github.run_id }}
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -138,6 +143,12 @@ jobs:
           TIMESTAMP=$(date +"%Y-%m-%d_%H-%M")
           aws s3 cp dist/${{needs.build-and-test.outputs.min_py_ver}}/${{needs.build-and-test.outputs.tool_dir}}-${{needs.build-and-test.outputs.version}}-py3-none-any.whl s3://mend-ps-staging/${{needs.build-and-test.outputs.tool_dir}}/"$TIMESTAMP"_${{ env.TOOL_NAME }}.whl
           aws s3api put-object-tagging --bucket mend-ps-staging --key ${{needs.build-and-test.outputs.tool_dir}}/"$TIMESTAMP"_${{ env.TOOL_NAME }}.whl --tagging "{\"TagSet\": [{\"Key\": \"User\", \"Value\": \"${{ env.GIT_USER}}\"},{\"Key\": \"Branch\", \"Value\": \"${{needs.build-and-test.outputs.source_branch}}\"},{\"Key\": \"CommitId\", \"Value\": \"${{env.COMMIT_ID}}\"}]}"
+      
+      - name: Upload to S3 bucket - WS
+        run: |
+          TIMESTAMP=$(date +"%Y-%m-%d_%H-%M")
+          aws s3 cp dist/${{needs.build-and-test.outputs.min_py_ver}}/ws_cleanup_tool-${{needs.build-and-test.outputs.version}}-py3-none-any.whl s3://mend-ps-staging/ws_cleanup_tool/"$TIMESTAMP"_ws_cleanup_tool.whl
+          aws s3api put-object-tagging --bucket mend-ps-staging --key ws_cleanup_tool/"$TIMESTAMP"_ws_cleanup_tool.whl --tagging "{\"TagSet\": [{\"Key\": \"User\", \"Value\": \"${{ env.GIT_USER}}\"},{\"Key\": \"Branch\", \"Value\": \"${{needs.build-and-test.outputs.source_branch}}\"},{\"Key\": \"CommitId\", \"Value\": \"${{env.COMMIT_ID}}\"}]}"
       - name: Publish to PyPI
         if: startsWith(github.ref, 'refs/tags/v')
         uses: pypa/gh-action-pypi-publish@release/v1
