--- a/.github/workflows/Test and Deploy Mend.yml
+++ b/.github/workflows/Test and Deploy Mend.yml
@@ -98,17 +98,17 @@ jobs:
         run: python setup-ws.py bdist_wheel
 
       - name: Install Wheel package - WS
-        run: pip install dist/ws_cleanup_tool_test-${{ steps.set_env_vars.outputs.VERSION }}-py3-none-any.whl
+        run: pip install dist/ws_cleanup_tool-${{ steps.set_env_vars.outputs.VERSION }}-py3-none-any.whl
 
       - name: copy whl - WS
         run: |
-          cp dist/ws_cleanup_tool_test-${{ steps.set_env_vars.outputs.VERSION }}-py3-none-any.whl dist/${{ steps.set_env_vars.outputs.PYTHON_VERSION }}/
+          cp dist/ws_cleanup_tool-${{ steps.set_env_vars.outputs.VERSION }}-py3-none-any.whl dist/${{ steps.set_env_vars.outputs.PYTHON_VERSION }}/
 
       - name: cache whl - WS
         uses: actions/cache@v3
         with:
-          path: dist/${{ steps.set_env_vars.outputs.PYTHON_VERSION }}/ws_cleanup_tool_test-${{ steps.set_env_vars.outputs.VERSION }}-py3-none-any.whl
-          key: ${{ steps.set_env_vars.outputs.PYTHON_VERSION }}_ws_cleanup_tool_test_${{ github.run_id }}
+          path: dist/${{ steps.set_env_vars.outputs.PYTHON_VERSION }}/ws_cleanup_tool-${{ steps.set_env_vars.outputs.VERSION }}-py3-none-any.whl
+          key: ${{ steps.set_env_vars.outputs.PYTHON_VERSION }}_ws_cleanup_tool_${{ github.run_id }}
 
       - name: Full test Time-Based - WS
         run: ws_cleanup_tool -r 50000 -m FilterProjectsByUpdateTime -u ${{ secrets.WS_USER_KEY }} -k ${{ secrets.WS_ORG_TOKEN }} -y true -o /tmp
@@ -129,8 +129,8 @@ jobs:
       - name: Restore whl - ws
         uses: actions/cache@v3
         with:
-          path: dist/${{needs.build-and-test.outputs.min_py_ver}}/ws_cleanup_tool_test-${{needs.build-and-test.outputs.version}}-py3-none-any.whl
-          key: ${{needs.build-and-test.outputs.min_py_ver}}_ws_cleanup_tool_test_${{ github.run_id }}
+          path: dist/${{needs.build-and-test.outputs.min_py_ver}}/ws_cleanup_tool-${{needs.build-and-test.outputs.version}}-py3-none-any.whl
+          key: ${{needs.build-and-test.outputs.min_py_ver}}_ws_cleanup_tool_${{ github.run_id }}
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -147,8 +147,8 @@ jobs:
       - name: Upload to S3 bucket - WS
         run: |
           TIMESTAMP=$(date +"%Y-%m-%d_%H-%M")
-          aws s3 cp dist/${{needs.build-and-test.outputs.min_py_ver}}/ws_cleanup_tool_test-${{needs.build-and-test.outputs.version}}-py3-none-any.whl s3://mend-ps-staging/ws_cleanup_tool_test/"$TIMESTAMP"_ws_cleanup_tool_test.whl
-          aws s3api put-object-tagging --bucket mend-ps-staging --key ws_cleanup_tool_test/"$TIMESTAMP"_ws_cleanup_tool_test.whl --tagging "{\"TagSet\": [{\"Key\": \"User\", \"Value\": \"${{ env.GIT_USER}}\"},{\"Key\": \"Branch\", \"Value\": \"${{needs.build-and-test.outputs.source_branch}}\"},{\"Key\": \"CommitId\", \"Value\": \"${{env.COMMIT_ID}}\"}]}"
+          aws s3 cp dist/${{needs.build-and-test.outputs.min_py_ver}}/ws_cleanup_tool-${{needs.build-and-test.outputs.version}}-py3-none-any.whl s3://mend-ps-staging/ws_cleanup_tool/"$TIMESTAMP"_ws_cleanup_tool.whl
+          aws s3api put-object-tagging --bucket mend-ps-staging --key ws_cleanup_tool/"$TIMESTAMP"_ws_cleanup_tool.whl --tagging "{\"TagSet\": [{\"Key\": \"User\", \"Value\": \"${{ env.GIT_USER}}\"},{\"Key\": \"Branch\", \"Value\": \"${{needs.build-and-test.outputs.source_branch}}\"},{\"Key\": \"CommitId\", \"Value\": \"${{env.COMMIT_ID}}\"}]}"
       - name: Publish to PyPI
         if: startsWith(github.ref, 'refs/tags/v')
         uses: pypa/gh-action-pypi-publish@release/v1
