--- a/.github/workflows/Test and Deploy Mend.yml
+++ b/.github/workflows/Test and Deploy Mend.yml
@@ -3,13 +3,13 @@ on:
   push:
     branches:
       - '**'
+      - 'feature/**'
       - '!ws-iac-scan-results/**'
       - '!whitesource-remediate/master-all**'
       - '!whitesource/migrate-configuration**'
     tags:
       - '*'
-  schedule:
-    - cron: '0 4 * * *'
+
 env:
   TOOL_NAME: mend_sca_cleanup_tool
   GIT_USER: ${{ github.actor }}
@@ -115,6 +115,40 @@ jobs:
 
       - name: Full test Copy-Based - WS
         run: ws_cleanup_tool -r 50000 -m FilterProjectsByLastCreatedCopies -u ${{ secrets.WS_USER_KEY }} -k ${{ secrets.WS_ORG_TOKEN }} -y true -o /tmp
+
+  publish-feature:
+    if: startsWith(github.ref, 'refs/heads/feature')
+    needs: [build-and-test]
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Get Environment Variables
+        id: get_env_vars
+        run: |
+          echo "MIN_PY_VER=${{ needs.build-and-test.outputs.min_py_ver }}" >> $GITHUB_ENV
+          echo "APP_PWD=${{ needs.build-and-test.outputs.app_pwd }}" >> $GITHUB_ENV
+          echo "APP_DIR=${{ needs.build-and-test.outputs.app_dir }}" >> $GITHUB_ENV
+          echo "VERSION=${{ needs.build-and-test.outputs.version }}" >> $GITHUB_ENV
+          echo "WHL_NAME=${{ needs.build-and-test.outputs.whl_name }}" >> $GITHUB_ENV
+          echo "SOURCE_BRANCH=${{ needs.build-and-test.outputs.source_branch }}" >> $GITHUB_ENV
+
+      - name: Restore whl
+        id: restore_whl
+        uses: actions/cache@v3
+        with:
+          path: ${{ env.APP_PWD }}/dist/${{ env.MIN_PY_VER }}/${{ env.WHL_NAME }}
+          key: ${{ env.MIN_PY_VER }}_${{ env.APP_DIR }}_${{ github.run_id }}
+
+      - name: Publish to TestPyPI
+        id: publish_to_test_pypi
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          skip-existing: false
+          user: __token__
+          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+          packages-dir: dist/${{ needs.build-and-test.outputs.min_py_ver }}
+          repository-url: https://test.pypi.org/legacy/
+          print-hash: true
 
   publish:
     if: ${{ startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/staging'}}
