--- a/.github/workflows/Test and Deploy Mend.yml
+++ b/.github/workflows/Test and Deploy Mend.yml
@@ -117,7 +117,7 @@ jobs:
 
 
   publish:
-    if: ${{ startsWith(github.ref, 'refs/tags/v')
+    if: ${{ startsWith(github.ref, 'refs/tags/v') }}
     needs: [build-and-test]
     runs-on: ubuntu-latest
     steps:
